docs: Adiciona documentacao final (README bilingue)

--- a/Industria40.ipynb
+++ b/Industria40.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "id": "ed2528ce-e134-445e-8a59-0574021ebb8b",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "id": "5a9cecc5-0ccc-4b93-b7a2-c2bf6ecd6239",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "id": "57a41a36-24a0-4806-bfe5-7b6defd751bf",
    "metadata": {},
    "outputs": [
@@ -154,32 +154,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "6c045af9-0337-4673-b4ee-52f9ec160b07",
+   "cell_type": "markdown",
+   "id": "a7b815ba-eff8-494a-b97a-5897fed8d299",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 📈 Conclusões e Insights da Análise Exploratória de Dados (EDA)\n",
     "\n",
-    "# A visualização das séries temporais de temperatura e vibração demonstra que o dataset possui uma clara separação entre o estado normal e o estado anômalo.\n",
+    "A visualização das séries temporais de temperatura e vibração demonstra que o dataset possui uma clara separação entre o estado normal e o estado anômalo.\n",
     "\n",
     "### 🔎 Observações Chave\n",
     "\n",
-    "# * *Comportamento Normal:* Nos primeiros 800 pontos de dados, ambas as variáveis operam em faixas estáveis (Estado de *Saúde* do equipamento).\n",
-    "# * *Detecção da Anomalia:* A partir do ponto de dados 800 (marcado pela linha tracejada), há uma clara *mudança de regime* e as métricas disparam.\n",
-    "# * *Sintomas da Pré-Falha:* O aumento na *Vibração* e *Temperatura* simula a degradação mecânica (fricção e desgaste) que precede uma falha catastrófica.\n",
+    "* *Comportamento Normal:* Nos primeiros 800 pontos de dados, ambas as variáveis operam em faixas estáveis (Estado de *Saúde* do equipamento).\n",
+    "* *Detecção da Anomalia:* A partir do ponto de dados 800 (marcado pela linha tracejada), há uma clara *mudança de regime* e as métricas disparam.\n",
+    "* *Sintomas da Pré-Falha:* O aumento na *Vibração* e *Temperatura* simula a degradação mecânica (fricção e desgaste) que precede uma falha catastrófica.\n",
     "\n",
     "### 💡 Implicações para o Machine Learning\n",
     "\n",
-    "# O sucesso deste projeto reside na capacidade do nosso modelo de *antecipar* essa transição. O próximo passo é criar uma *Variável Alvo Binária* (is_failure_imminent) para treinar o modelo de classificação, permitindo que a manutenção seja programada *antes* da falha se concretizar.\n",
+    "O sucesso deste projeto reside na capacidade do nosso modelo de *antecipar* essa transição. O próximo passo é criar uma *Variável Alvo Binária* (is_failure_imminent) para treinar o modelo de classificação, permitindo que a manutenção seja programada *antes* da falha se concretizar.\n",
     "\n",
-    "# Próximo Passo: Preparação dos Dados para o Machine Learning (Criação da Variável Alvo)."
+    "*Próximo Passo:* Preparação dos Dados para o Machine Learning (Criação da Variável Alvo)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3512153-9697-46a6-8051-301c58efd2cf",
+   "metadata": {},
+   "source": [
+    "## 📈 Conclusions and Insights from Exploratory Data Analysis (EDA)\n",
+    "\n",
+    "The visualization of the simulated time-series data confirms the existence of two distinct operational regimes, which is ideal for building a predictive model.\n",
+    "\n",
+    "### 🔎 Key Observations\n",
+    "\n",
+    "* *Normal Behavior:* In the first 800 data points, both variables operate within stable ranges (Average Temperature of $60^{\\circ}\\text{C}$, Average Vibration of 0.5 g). This represents the equipment's *\"Health\"* state.\n",
+    "* *Anomaly Detection:* Starting from data point 800 (marked by the dashed line), there is a clear *regime shift*, and both metrics spike.\n",
+    "* *Pre-Failure Symptoms:* The increase in *Vibration* and *Temperature* simulates mechanical degradation (friction and wear) that precedes a catastrophic failure.\n",
+    "\n",
+    "### 💡 Implications for Machine Learning\n",
+    "\n",
+    "The success of this Industry 4.0 project relies on our ability to *classify* these two states correctly. The next step is to create a *Binary Target Variable* (is_failure_imminent) to train the classification model, enabling maintenance to be scheduled *before* the actual breakdown occurs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "id": "a989d6e1-cc6a-4ffb-9e08-b8feb1663825",
    "metadata": {},
    "outputs": [
@@ -216,6 +234,163 @@
     "# O modelo de ML precisa apenas das colunas numéricas (temperatura e vibração)\n",
     "X = df[['temperatura_c', 'vibracao_g']]\n",
     "y = df['is_failure_imminent']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "7abe1750-03c8-4f68-ab3e-50a62eaec577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados de Treino (80%): 800 amostras\n",
+      "Dados de Teste (20%): 200 amostras\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Célula 8: Divisão dos Dados\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# O X e o y já estão definidos na Célula 7.\n",
+    "\n",
+    "# 1. Divisão dos Dados\n",
+    "# 80% para treino, 20% para teste\n",
+    "# random_state=42 garante que a divisão será sempre a mesma (reprodutibilidade)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=42, \n",
+    "                                                    stratify=y) # stratify garante que a proporção de 0s e 1s seja mantida\n",
+    "\n",
+    "print(f\"Dados de Treino (80%): {len(X_train)} amostras\")\n",
+    "print(f\"Dados de Teste (20%): {len(X_test)} amostras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "82678cf2-3bae-44ab-8420-700d06bdc17d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do Modelo no Conjunto de Teste: 0.9850\n",
+      "\n",
+      "--- Relatório de Classificação (Precision, Recall, F1-Score) ---\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99       160\n",
+      "           1       1.00      0.93      0.96        40\n",
+      "\n",
+      "    accuracy                           0.98       200\n",
+      "   macro avg       0.99      0.96      0.98       200\n",
+      "weighted avg       0.99      0.98      0.98       200\n",
+      "\n",
+      "\n",
+      "--- Matriz de Confusão ---\n",
+      "[[160   0]\n",
+      " [  3  37]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Célula 9: Treinamento e Avaliação do Modelo\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "\n",
+    "# 1. Instanciar (Criar) o Modelo\n",
+    "model = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# 2. Treinar o Modelo (Aprender a relação entre sensores e falha)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# 3. Fazer Previsões nos Dados de Teste\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# 4. Avaliar o Desempenho\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Acurácia do Modelo no Conjunto de Teste: {accuracy:.4f}\")\n",
+    "\n",
+    "print(\"\\n--- Relatório de Classificação (Precision, Recall, F1-Score) ---\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "print(\"\\n--- Matriz de Confusão ---\")\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c69c070a-45d2-4e6d-adac-af842333aad1",
+   "metadata": {},
+   "source": [
+    "## ✅ Resultados e Conclusão do Modelo de Manutenção Preditiva\n",
+    "\n",
+    "O modelo de Regressão Logística foi treinado para classificar o estado do equipamento em *0 (Normal)* ou *1 (Risco de Falha Iminente)*. Os resultados demonstram uma alta eficácia do sistema preditivo:\n",
+    "\n",
+    "### 📊 Métricas de Desempenho no Conjunto de Teste\n",
+    "\n",
+    "| Métrica | Valor Obtido | Significado Industrial |\n",
+    "| :--- | :--- | :--- |\n",
+    "| *Acurácia* | *0.9850 (98.5%)* | Alto nível de confiança na previsão do estado do equipamento. |\n",
+    "| *Precision (Risco de Falha - Classe 1)* | *1.00* | *Resultado Excepcional:* Indica que *não houve Alarmes Falsos (False Positives)*. Cada alerta de falha dado pelo sistema é confiável, evitando paradas de produção desnecessárias. |\n",
+    "| *Recall (Risco de Falha - Classe 1)* | *0.93* | O modelo capturou 93% dos casos reais de risco de falha. |\n",
+    "\n",
+    "### 💡 Análise da Matriz de Confusão (Valor de Negócio)\n",
+    "\n",
+    "A Matriz de Confusão mostra que o modelo cometeu apenas um tipo de erro:\n",
+    "\n",
+    "* *Falsos Negativos (3 Casos):* O modelo falhou em prever 3 casos reais de \"Risco de Falha\" (Recall de 0.93).\n",
+    "* *Avanço na Indústria 4.0:* A *Precision perfeita (1.00)* é um diferencial valioso, pois o sistema é altamente confiável. O foco em trabalhos futuros deve ser a otimização do *Recall* para garantir que 100% das falhas sejam previstas, minimizando o risco de quebras não programadas.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🏁 Encerramento e Próximos Passos Sugeridos\n",
+    "\n",
+    "Este projeto demonstra com sucesso a aplicação de Machine Learning em dados de IoT industrial para Manutenção Preditiva.\n",
+    "\n",
+    "Para aprimorar o projeto e torná-lo ainda mais completo, sugiro focar no *Feature Engineering* (criação de novas variáveis como médias móveis de temperatura) para reduzir os 3 Falsos Negativos restantes.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d5d1036-8006-49d8-b066-3f44de2e42e3",
+   "metadata": {},
+   "source": [
+    "## ✅ Predictive Model Results and Conclusion\n",
+    "\n",
+    "The Logistic Regression model was trained to classify the equipment state as *0 (Normal)* or *1 (Risk of Imminent Failure)*. The results demonstrate high efficacy for the predictive system:\n",
+    "\n",
+    "### 📊 Performance Metrics on the Test Set\n",
+    "\n",
+    "| Metric | Value Obtained | Industrial Significance |\n",
+    "| :--- | :--- | :--- |\n",
+    "| *Accuracy* | *0.9850 (98.5%)* | High confidence level in predicting the equipment's state. |\n",
+    "| *Precision (Failure Risk - Class 1)* | *1.00* | *Exceptional Result:* Indicates *Zero False Alarms (False Positives)*. Every failure alert generated by the system is reliable, preventing unnecessary and costly production stoppages. |\n",
+    "| *Recall (Failure Risk - Class 1)* | *0.93* | The model successfully captured 93% of all real risk-of-failure cases. |\n",
+    "\n",
+    "### 💡 Confusion Matrix Analysis (Business Value)\n",
+    "\n",
+    "The Confusion Matrix shows that the model primarily committed one type of error:\n",
+    "* *False Negatives (3 Cases):* The model failed to predict 3 real \"Risk of Failure\" cases (Recall of 0.93).\n",
+    "* *Industry 4.0 Advancement:* The *perfect Precision (1.00)* is a valuable differentiator, showing the system is highly trustworthy. Future work should focus on optimizing *Recall* to reduce the remaining 3 False Negatives and completely eliminate the risk of unscheduled downtime.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🏁 Project Wrap-up and Next Suggested Steps\n",
+    "\n",
+    "This project successfully demonstrates the application of Machine Learning on industrial IoT data for Predictive Maintenance.\n",
+    "\n",
+    "To further enhance the project, I suggest focusing on *Feature Engineering* (creating new variables like moving averages for temperature) to reduce the remaining False Negatives."
    ]
   }
  ],
